feat: HTML structure done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <main>
+    <article>
+      <div class="left-container">
+        <img src="images/phones.png">
+      </div>
+      <div class="right-container">
+        <div class="top-right-container">
+          <div class="logo">
+            <img src="images/brand.png">
+          </div>
+          <div class="button-container">
+          </div>
+        </div>
+        <div class="lower-right-container">
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+              Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+            <div class="commercial-links">
+              <img src="images/badge-iphone.png">
+              <img src="images/badge-android.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+  </main>
+  <footer>
+    <nav class="nav-bar">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </nav>
+    <span class="credentials">
   &copy; 2014 Instagram
+</span>
+  </footer>
 </body>
+
 </html>
