--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
   <title>Instagram</title>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="css/main.css">
+
+
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
+ <img src = "images/brand.png" id="brand" alt="brand">
+ <button>
+    <img src = "images/home.png" id= "home"  alt= "home"><p> Log in </p>
+  </button>
+</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div class = "content" >
+ <img src = "images/phones.png">
+</div>
 
-  Oh yeah, did we mention it's free?
+ <div class = "main">
+  <h1> Capture and Share the World's Moments </h1>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way
+      to share your life with friends and family.<br>
+      Take a picture or video, choose a filter to transform its
+      look and feel, then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook, Twitter, Tumblr and more.
+        It's a new way to see the world.<br>
+        Oh yeah, did I mention it's free?
+  </p>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class = "downloads">
+  <img src = "images/badge-android.png">
+  <img src = "images/badge-iphone.png">
+</div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+<footer>
+    <ul>
+        <li> About Us </li>
+        <li> Support </li>
+        <li> Blog </li>
+        <li> Press </li>
+        <li> API </li>
+        <li> Jobs </li>
+        <li> Privacy </li>
+        <li> Terms </li>
+        <li style="color:orange;" > &copy; 2014 Instagram </li>
+
+    </ul>
+</footer>
+
 </body>
 </html>
