--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <section class="blue">
+
+  </section>
   <section class="images">
     <img src="images\phones.png" alt="Phones">
   </section>
@@ -20,16 +23,16 @@
     <img src="images\badge-android.png" alt="Get it on Google Play">
   </section>
   <footer>
+  <nav>
   About Us
   Support
   Blog
-  Press
   API
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+  </nav>
   </footer>
 </body>
 </html>
