feat: ejercicio no completo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <span class="blue-box"></span>
+  <div class="general-container">
+    <section class="left-container">
+      <img src="images/phones.png" alt="Phone">
+    </section>
+    <div class="side-message">
+      <section>
+        <img src="images/brand.png" alt="Instagram" >
+        <div class="button">
+          Log in
+        </div>
+      </section>
+        <img src="images/frame.png" alt="box" class="top-box">
+        <div class="message-box">
+        <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+              Oh yeah, did we mention it's free?
+          </p>
+        </div>
+      <section><br>
+      Download on the App Store
+      Get it on Google Play
+      </section>
+    </div>
+  </div>
+  <footer class="footer">
   About Us
   Support
   Blog
@@ -25,7 +40,7 @@
   Jobs
   Privacy
   Terms
-
+</footer>
   &copy; 2014 Instagram
 </body>
 </html>
