--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="centercontainer">
+    <div class="container">
+      <div class="left">
+        <img class="iphone" src="images/phones.png" alt="devices" />
+      </div>
+      <div class="right">
+        <div class="righttop">
+          <img class="logo" src="images/brand.png" alt="instagram-logo" />
+          <div class="rightbottom">
+            <a class="login" href="#"><img class="homeIcon" src="images/home.png" alt="login">Log in</a>
 
-  Capture and Share the World's Moments
+          </div>
+        </div>
+        <div class="backgroundWhite">
+          <div class="textright">
+            <h1>Capture and Share the World's Moments</h1>
+            <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          </div>
+        </div>
+        <footer>
+          <a class="button-app-android" href="#"><img class="android" src="images/badge-android.png"/ alt="android"></a>
+          <a class="button-app-iphone" href="#"><img class="iphone" src="images/badge-iphone.png" alt="iphone"/></a>
+        </footer>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  </div>
+  </container>
 </body>
+
 </html>
