--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="file:///home/cesar/Ironhack/week1/day2/lab-css-instagram-clone/starter-code/css/main.css"/>
 </head>
+
 <body>
-  Instagram
+  <div containercolor = "wrapper">
+  </div>
+  <div class="right">
+    <img class="iphone" src="images/phones.png" alt="iphone" />
+  </div>
+  <div class="left">
+    <img class="brand" src="images/brand.png" alt="instagram" />
+  </div>
+  <div class="below">
 
-  Capture and Share the World's Moments
+  <p> Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+<div class = "badgediv1">
+  <img class="badgeI" src="images/badge-iphone.png" />
+  </div>
+  <div class = "badgediv2">
+    <img class="badgeA" src="images/badge-android.png" />
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="block">
+<footer>
+  <nav>
+    <ul>
+     <li><a href="#">About Us</a></li>
+     <li><a href="#">Support</a></li>
+     <li><a href="#">Blog</a></li>
+     <li><a href="#">Press</a></li>
+     <li><a href="#">API</a></li>
+     <li><a href="#">Jobs</a></li>
+     <li><a href="#">Privacy</a></li>
+     <li><a href="#">Terms</a></li>
+     <li>&copy; 2014 Instagram</li>
+    </ul>
+ </nav>
+</footer>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
