FEAT: Exercise of instagram, I don't know how to add the frame, how to put in the same line the download bottoms and what it's happen with my footer

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
+<div class="brand">
+  <img src="images/brand.png">
+</div>
+  <button class="button">Log in</button>
+<div class="phone">
+  <img src="images/phones.png">
+</div>
+</header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class="first-section">
+
+  <h1>Capture and Share the World's Moments</h1>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <img class= "button-iphone" src="images/badge-iphone.png">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img class= "button-android" src="images/badge-android.png">
 
-  &copy; 2014 Instagram
+</section>
+
+<footer>
+  <ul class="footer-bar-ul">
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">About Us</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Support</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Blog</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Press</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">API</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Jobs</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Privacy</a></li>
+            <li class="footer-bar-li"><a class="footer-bar-item" href="#" target="blue">Terms</a></li>
+  </ul>
+  <p class="copyright">&copy; 2014 Instagram</p>
+</footer>
+
 </body>
 </html>
