--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,34 +5,53 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section class="blue">
-
-  </section>
-  <section class="images">
-    <img src="images\phones.png" alt="Phones">
-  </section>
-  <section class="text">
-      <img src="images\brand.png" alt="Instagram">
-    <h1>Capture and Share the World's Moments</h1>
-    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-    <p>Oh yeah, did we mention it's free?</p>
-  </section>
-  <section>
-    <img src="images\badge-iphone.png" alt="Download on the App Store">
-    <img src="images\badge-android.png" alt="Get it on Google Play">
-  </section>
-  <footer>
-  <nav>
-  About Us
-  Support
-  Blog
-  API
-  Jobs
-  Privacy
-  Terms
-  &copy; 2014 Instagram
-  </nav>
-  </footer>
+  <div class="main-section">
+        <div class="phones">
+            <img src="images\phones.png" alt="Phones">
+        </div>
+        <div class="main-text-section">
+            <div>
+                <div class="logo">
+                  <img src="/Users/ameliasalgado/Documents/Ironhack/lab-css-instagram-clone/starter-code/images/brand.png" alt="Logo">
+                </div>
+                <div class="home-button">
+                  <div class="home">
+                      <img src="/Users/ameliasalgado/Documents/Ironhack/lab-css-instagram-clone/starter-code/images/home.png" alt="Logo">                      
+                  </div>
+                  <div class="home-text">
+                      <p>Log in</p>
+                  </div>
+                </div>
+            </div>
+            <div class="main-text">
+                <h1>Capture and Share the World's Moments</h1>
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p> 
+              </div>
+              <div class="main-buttons">
+                <div class="iphone">
+                    <img src="/Users/ameliasalgado/Documents/Ironhack/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="App Store">          
+                </div>
+                <div class="android">
+                    <img src="/Users/ameliasalgado/Documents/Ironhack/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Android">          
+                </div>
+              </div>
+        </div>
+  </div>
+  <br>
+  <div class="navigation">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+  </div>
 </body>
 </html>
