--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bluebar">
+      <div class="flexcontainer">
+        <div class="phone">
+          <img src="images/phones.png" alt="phones with preview">
+        </div>
+        <div>
+          <nav>
+            <img src="images/brand.png" alt="instagram logo">
+            <button>
+              <a href="" ><img src="images/home.png" alt="house image">Log in</a>
+            </button>
+          </nav>
+        <div class="whitebox">
+          <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <a href=""><img src="images/badge-android.png" alt="Download on the App Store"></a>
+          <a href=""><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li><p>&copy; 2014 Instagram</p></li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
