--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-  Instagram
+ <body>
+  <div class="phone">
+   <img src="./images/phones.png"alt="Phones">
+  </div>
+ <section class="pageHead" >
+  <div>
+   <img src="./images/brand.png" alt="Logo & Brand">
+   <button type="button" name="button"><img src="images/home.png"><p> Log in<p></button>
+  </div>
 
-  Capture and Share the World's Moments
+   <div class="contentBox">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+     <h1>Capture and Share<br> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+       <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?</p>
+</div>
+    <div class="button2">
+  <a href="#"><img src="./images/badge-iphone.png" alt="App Store"></a>
+  <a href="#"><img src="./images/badge-android.png"alt="Google Play"></a>
+</div>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ <footer>
+  <a href="#">"About Us"</a>
+  <a href="#">"Support"</a>
+  <a href="#" >"Blog"</a>
+  <a href="#">"Press"</a>
+  <a href="#">"API"</a>
+  <a href="#">"Jobs"</a>
+  <a href="#">"Privacy"</a>
+  <a href="#">"Terms"</a>
+<div>  &copy; 2014 Instagram</div>
+</footer>
 </body>
 </html>
