--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue-box"></div>
 
-  Capture and Share the World's Moments
+  <div class="row">
+  <div class="left">
+    <img src="images/phones.png" alt="">
+  </div>
+  <div class="right">
+    <div clas="top-box"> 
+      <div><img src="images/brand.png" alt=""></div>
+      <div><button class="btn"><img src="images/home.png" alt=""> Log in </button> </div>     
+    </div>
+    <div>
+      <div class="box">
+        <h2> Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          
+            Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+      <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+  
+    </ul>
+      &copy; 2014 Instagram</div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
