--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/estilos.css">
+  <script src="https://use.fontawesome.com/23a2cade5b.js"></script>
 </head>
+
 <body>
-  Instagram
+  <main id="main">
+    <section class="section" id="section-main">
+      <div class="column-wrapper">
+        <div class="column column-5">
+          <div class="img-wrapper derecha">
+            <img src="images/phones.png" alt="">
+          </div>
+        </div>
+        <div class="column column-7 padded-content">
+          <div class="logo-wrapper">
+            <img src="images/brand.png" alt="Instagram" class="izquierda">
+            <button class="right btn">
+              <i class="fa fa-home" aria-hidden="true"></i>Log in</button>
+          </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="white-box">
+            <h1>
+              Capture and Share the World's Moments
+            </h1>
+            <p>
+              Instagram is a
+              <strong>fast</strong>,
+              <strong>beautiful</strong> and
+              <strong>fun</strong> way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You
+              can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="wrap-img">
+              <a href="#" target="_blank"><img src="images/badge-iphone.png" alt="App Store"></a>
+              <a href="#" target="_blank"><img src="images/badge-android.png" alt="Android"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer>
+      <ul class="list-inline">
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="">Support</a>
+        </li>
+        <li>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Press</a>
+        </li>
+        <li>
+          <a href="">API</a>
+        </li>
+        <li>
+          <a href="">Jobs</a>
+        </li>
+        <li>
+          <a href="">Privacy</a>
+        </li>
+        <li>
+          <a href="">Terms</a>
+        </li>
+        <li>
+          &copy; 2014 Instagram
+        </li>
+      </ul>
+    </footer>
+  </main>
 </body>
+
 </html>
