--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+  </header>
+  <section class="flexStyle">
+    <div>
+      <img class="phoneColor" src="images/phones.png" alt="">
+    </div>
+    <div class="detail">
+      <div class="flexStyle">
+        <div>
+          <img src="images/brand.png" alt="Instagram">
+        </div>
+        <div class="homeStyle">
+          <img src="images/home.png" alt=""> Log in
+        </div>
+      </div>
+      <div class="detail2">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+        Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p>Oh yeah, did we mention it's free?</p>
+    <div class="flexStyle">
+      <div><img src="images/badge-iphone.png" alt="Download on the App Store"></div>
+      <div><img src="images/badge-android.png" alt="Get it on Google Play"></div>
+    </div>
+  </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+</section>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+</div>
 </body>
 </html>
