--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,33 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" >
 </head>
 <body>
-  Instagram
+  <img src="images/phones.png" alt="Iphones" class="imgIphones" >
+  <img src="images/brand.png" alt="Brand" >
+  <div class="home"> <img src="images/home.png" alt="Home"> Log in </div>
 
-  Capture and Share the World's Moments
+<div class="box">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+<p>  Instagram is a <a>fast</a>, <a>beautiful</a> and <a>fun</a> way to share your life with friends and family.
+<br>
+<br>
+  Take a picture or video, choose a filter to transform its look and feel,
+ then post to Instagram &mdash; it's that easy.
+  You can even share to Facebook, Twitter, Tumblr and more.
+   It's a new way to see the world.
+<br>
+<br>
   Oh yeah, did we mention it's free?
+</p>
+<img src="images/badge-iphone.png" alt="badge iphone" >
+<img src="images/badge-android.png" alt="badge android" >
 
-  Download on the App Store
-  Get it on Google Play
-
+</div>
+<div class="clear"></div>
+<div class="menu">
   About Us
   Support
   Blog
@@ -25,7 +37,8 @@
   Jobs
   Privacy
   Terms
+  <p class="p">  &copy; 2014 INSTAGRAM</p>
+</div>
 
-  &copy; 2014 Instagram
 </body>
 </html>
