--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,11 +4,12 @@
   <title>Instagram</title>
 </head>
 <body>
+  <header> </header>
   Instagram
 
-  Capture and Share the World's Moments
+  <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
@@ -16,16 +17,21 @@
 
   Download on the App Store
   Get it on Google Play
+  <nav id='site-nav' class='container'>
+    <ul>
+      <li><a href='#'>About Us</a></li>
+      <li><a href='#'>Support</a></li>
+      <li><a href='#'>Blog</a></li>
+      <li><a href='#'>Press</a></li>
+      <li><a href='#'>API</a></li>
+      <li><a href='#'>Jobs</a></li>
+      <li><a href='#'>Privacy</a></li>
+      <li><a href='#'>Terms</a></li>
+    </ul>
+  </nav>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    &copy; 2014 Instagram 
+  </footer>
 </body>
 </html>
