--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class= "container1">
+    <img src="./images/phones.png">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class= "container2">
+    <img src="./images/brand.png">
+    <img src="./images/home.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+    <h2>Capture and Share the World's Moments<h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class= "description">Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  &copy; 2014 Instagram
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+    Oh yeah, did we mention it's free?</div>
+
+    <div id="apple"><img src="./images/badge-iphone.png">
+      </div>
+    <div id="googlePlay">  <img src="./images/badge-android.png"></div></div>
+</div>
+
+  <footer id="bottomBar">
+    <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li></ul>
+
+
+  &copy; 2014 Instagram</footer>
 </body>
 </html>
