--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,71 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main">
+  <div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="left float-left">
+        <img src="images/phones.png" alt="">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <div class="right float-left">
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="top-links">
+        <img class="float-left" src="images/brand.png" alt="">
+        <p class="login"><img src="images/home.png" alt=""><a href="">Login in</a></p>
+      </div>
+      <div class="clear-fix"></div>
+      <div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="right-body">
+      <h1>Capture and Share <br>
+         the World's Moments</h1>
+         <br>
 
-  &copy; 2014 Instagram
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>  <br>
+
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+       You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> <br>
+
+      Oh yeah, did we mention it's free?<br><br>
+
+      <img src="images/badge-iphone.png" class="badge-iphone" alt="">
+      <img src="images/badge-android.png" alt="">
+      </div>
+
+
+
+
+
+
+
+    </div>
+
+
+
+  </div>
+  <div class="bottom-nav">
+  <ul>
+    <li><a href="">About Us</a></li>
+    <li><a href="">Support</a></li>
+    <li><a href="">Blog</a></li>
+    <li><a href="">Press</a></li>
+    <li><a href="">API</a></li>
+    <li><a href="">Jobs</a></li>
+    <li><a href="">Privacy</a></li>
+    <li><a href="">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+
+  </div>
+  </div>
+
+</div>
 </body>
 </html>
