--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,63 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="headImage">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="wrapper">
+    <div>
+    <img src="./images/phones.png">
+  </div>
+  <div class="description">
+    <div class="branding">
+    <img src="./images/brand.png" alt="Instagram">
+    <div class="logIn">
+      <div>
+      <img src="./images/home.png" alt="Instagram">
+    </div>
+      <div>
+        Log in
+      </div>
+    </div>
+  </div>
+  <div class="whiteBox">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br /><br />
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br /><br />
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free? </p>
 
-  Download on the App Store
-  Get it on Google Play
+  <div>
+  <img src="./images/badge-iphone.png" alt="Download on the App Store">
+  <img src="./images/badge-android.png" alt="Get it on Google Play">
+</div>
+</div>
+</div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class ="bottomPart">
+  <div>
+    <nav class="navBar">
+    <ul class="noStyle">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+</nav>
+</div>
 
+<footer>
   &copy; 2014 Instagram
+</footer>
+</div>
 </body>
 </html>
