--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
+<div class = "container">
+  <img id= "phones" src="images/phones.png">
+
+<div id="column">
+  <div class = "subimages">
+    <img src = "images/brand.png">
+    <div>
+        <button id = "button" type="submit">Log in!<img src="images/home.png"></button>
+      </div>
+  </div>
+  <div class="subintro">
   Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+  You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
 
   Oh yeah, did we mention it's free?
 
+
   Download on the App Store
   Get it on Google Play
+</div>
+<div class="subimages">
+<img src="images/badge-iphone.png">
+<img src="images/badge-android.png">
+</div>
+</div>
+</div>
 
+<footer>
   About Us
   Support
   Blog
@@ -25,7 +48,10 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+  </footer>
+
 </body>
+
+
 </html>
