--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,29 +3,48 @@
 <head>
   <title>Instagram</title>
 </head>
+
+<header>
+
+</header>
+
 <body>
-  Instagram
+  <div class="iphones">
+    <img src="images/phones.png" alt="">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="main-left">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div>Instagram logo and button
+      <div>instagram logo</div>
+      <button>boton</button>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="text-box">
+      <img class="image-text-box" src="images/frame.png" alt="">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast, beautiful</strong>  and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png" alt="">
+      <img src="images/badge-android.png" alt="">
+    </div>
 
-  Oh yeah, did we mention it's free?
+  </div>
+  
+  <footer>
+    <ul class="footer">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
