--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  <header> </header>
-  Instagram
-
-  <h1>Capture and Share the World's Moments</h1>
-
-  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-  <nav id='site-nav' class='container'>
+    <div id="site-title">
+        <img class ="" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/brand.png">
+        <img class ="" src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/home.png">
+          <p class="box-style">
+            Log In
+          </p>
+     </div>
+        <div id="body-style">
+          <img src="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/phones.png">
+          <img src ="/home/david/Documents/Ironhack/Week 1/Day 2/lab-css-instagram-clone/starter-code/images/frame.png">
+            <h1>Capture and Share the World's Moments</h1>
+              <p>
+                  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way share your life with friends and family. <br>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+                  Oh yeah, did we mention it's free?
+                  Download on the App Store
+                  Get it on Google Play
+              </p>
+        </div>
+  <nav id="site-nav">
     <ul>
-      <li><a href='#'>About Us</a></li>
-      <li><a href='#'>Support</a></li>
-      <li><a href='#'>Blog</a></li>
-      <li><a href='#'>Press</a></li>
-      <li><a href='#'>API</a></li>
-      <li><a href='#'>Jobs</a></li>
-      <li><a href='#'>Privacy</a></li>
-      <li><a href='#'>Terms</a></li>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
     </ul>
   </nav>
 
-  <footer>
+  <footer id="site-footer">
     &copy; 2014 Instagram 
   </footer>
 </body>
