--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type "text/css" href="./css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="box-principal">
+    <div class="box-izquierda">
+      <img class="img-phones" src="images/phones.png"></img>
+    </div>
+      <div class="box-derecha">
+        <div class="box-der-arriba">
+        <img class="img-brand" src="images/brand.png"></img>
+        <div class="btn-login-wrapper">
+        <button class="btn-login">
+            <img src="./images/home.png">  
+          Login  
+        </button>
+      </div>
+      </div>
+      <div class="box-der-medio">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p class="texto">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
+        Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="box-der-abajo">
+        <a href="#">
+          <img src="images/badge-iphone.png" class="img-ios"></img>
+        </a>
+        <a href="#">
+          <img src="images/badge-android.png" class="img-android"></img>
+        </a>
+      </div>
+    </div>
+  </div>
+  <p class="footer"><strong>About Us
   Support
   Blog
   Press
   API
   Jobs
   Privacy
-  Terms
+  Terms</strong></p>
 
-  &copy; 2014 Instagram
+  <p class="footer" >&copy; 2014 Instagram</p>
 </body>
 </html>
