--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bg blue"></div>
+  <div class="bg img"></div>
+    <div class="content">
+      <img>
+      <div class="content2">
+        <div class="header"></div>
+          <div class="logo"></div>
+          <div class="instg"></div>
+          <div class="login"></div>
+        <div class="text">
+          Instagram
 
-  Capture and Share the World's Moments
+          Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+          Download on the App Store
+          Get it on Google Play
+         </div>  
+         <div class="apps">
+           <img iphone>
+           <img andoid>
+      </div>
+      </div>
+
 
   About Us
   Support
