--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,35 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="cabecera-blue">
+  <img src="images/phones.png" alt="iphone" id="movil" />
+</div>
+
+<div class="logo-instagram">
+  <a href="http://www.instagram.com" target="_blank"><img src="images/brand.png" alt="logo instagram" id="logo-instagram" />
+  <a href="#" alt="boton instagram" id="login"><img src="images/home.png" alt="home" id="casita"/> Log in</a>
+</div>
+
+<div class="container-text">
+  <h2 id="title-darkblue">Capture and Share the World's Moments</h2>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<div class="rrss">
+  <img src="images/badge-iphone.png" alt="iphone apple store" />
+  <img src="images/badge-android.png" alt="android play store" />
+</div>
 
+<div class="footer">
   About Us
   Support
   Blog
@@ -26,6 +40,11 @@
   Privacy
   Terms
 
+  <br/>
   &copy; 2014 Instagram
+
+</div>
+
+ 
 </body>
 </html>
