--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type=text/css href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section id="headband">
+  <img id="instragram" src="images/brand.png" alt="Instragram logo">
+  <button type="button" id="home_login"><img src="images/home.png" alt="Login Section">Log In</button>
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section id="corps">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img id="phones" src="images/phones.png" alt="Phones Picture">
 
-  Oh yeah, did we mention it's free?
+<div id="content_text">
+  <h3>Capture and Share the World's Moments</h3>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?
+</div>
+</section>
+
+<ul class="button">
+  <li><button id="button_iphone"><img src="images/badge-iphone.png" alt="Apple Store badge"></button></li>
+  <li><button id="button_android"><img src="images/badge-android.png" alt="Android Store badge"></button></li>
+</ul>
+
+
+
+<footer>
+<ul>
+  <li><a class="link" id="About_us" href="#About_us">About Us</a></li>
+  <li><a class="link" id="Support" href="#Support">Support</a></li>
+  <li><a class="link" id="Blog" href="#Blog">Blog</a></li>
+  <li><a class="link" id="Press" href="#Press">Press</a></li>
+  <li><a class="link" id="API" href="#API">API</a></li>
+  <li><a class="link" id="Jobs" href="#Jobs">Jobs</a></li>
+  <li><a class="link" id="Privacy" href="#Privacy">Privacy</a></li>
+  <li><a class="link" id="Terms" href="#Terms">Terms</a></li>
+  <li>  &copy; 2014 Instagram</li>
+</ul>
+</footer>
+
 </body>
 </html>
