--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background-blue"></div>
+  <div class="absolute absolute-central-box">
+  <div class="box-img-phone">
+      <img class='box-img' src="../starter-code/images/phones.png" alt="phone imagen">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="box-container-info">
+  <div class="img-instagram">
+  </div>
+  <h1><img src="../starter-code/images/brand.png" alt="brand icon"></h1>
+  
+  <div class="info-instagram">
+  <div classe="box-info-instagram">
+  <h2>Capture and Share </br>the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
 
+  <div class="button">
   Download on the App Store
+  </div>
+
+  <div class="button">
   Get it on Google Play
+  </div>
+  </div>
+  </div>
+  
+  </div>
+  <div class='clearfix'></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class="footer-bar">
+      <ul class="footer-bar-ul footer-bar-li">
+        <li><a class="footer-bar-item-link" href="#">About Us</a></li>
+        <li><a class="footer-bar-item-link" href="#">Support</a></li>
+        <li><a class="footer-bar-item-link" href="#">Blog</a></li>
+        <li><a class="footer-bar-item-link" href="#">Press</a></li>
+        <li><a class="footer-bar-item-link" href="#">API</a></li>
+        <li><a class="footer-bar-item-link" href="#">Jobs</a></li>
+        <li><a class="footer-bar-item-link" href="#">Privacy</a></li>
+        <li><a class="footer-bar-item-link" href="#">Terms</a></li>
+        <li class="footer-bar-item">&copy; 2014 Instagram</li>
+      </ul>
+  </footer>
 
-  &copy; 2014 Instagram
+  </div>
+ 
+ 
+ 
 </body>
 </html>
