--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,34 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <header>
-
+  
 </header>
 
 <body>
-  <div class="iphones">
-    <img src="images/phones.png" alt="">
-  </div>
-
-  <div class="main-left">
-
-    <div>Instagram logo and button
-      <div>instagram logo</div>
-      <button>boton</button>
+  <div class="main-container">
+    <div class="iphones">
+      <img src="images/phones.png" alt="">
     </div>
 
-    <div class="text-box">
-      <img class="image-text-box" src="images/frame.png" alt="">
-      <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a <strong>fast, beautiful</strong>  and <strong>fun</strong> way to share your life with friends and family.</p>
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
-      <img src="images/badge-iphone.png" alt="">
-      <img src="images/badge-android.png" alt="">
-    </div>
+    <div class="main-right">
 
+      <div>
+        <img class="instagram-image" src="images/brand.png" alt="">
+        <button>boton</button>
+      </div>
+
+      <div class="text-box">
+        
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast, beautiful</strong>  and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
+      </div>
+
+    </div>
   </div>
   
   <footer>
