PAR INSTAGRAM JEAN-NICOLAS

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="background">
+    <div class="container">
+      <section class="Iphone"><img src="./images/phones.png" alt="Iphone"></section>
+      <section class="description">
+        <section class="desc-top">
+          <div class="Instagram"><img src="./images/brand.png" alt="Instagram" class="Instagram-logo"></div>
+          <a href="#" class="login"><img src="./images/home.png" alt="Home" class="home">Log in</a>
+        </section>
+        <div class="text">
+          <p class="title">Capture and Share the World's Moments</p>
+          <div class="paragraph">
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+        <section class="desc-bottom">
+          <div class="appstore"><img src="./images/badge-iphone.png" alt="appstore"></div>
+          <div class="googleplay"><img src="./images/badge-android.png" alt="googleplay"></div>
+        </section>
+      </section>
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer class="footer">
+      <ul class="ul">
+        <li class="li">About Us</li>
+        <li class="li">Support</li>
+        <li class="li">Blog</li>
+        <li class="li">Press</li>
+        <li class="li">API</li>
+        <li class="li">Jobs</li>
+        <li class="li">Privacy</li>
+        <li class="li">Terms</li>
+        <li class="li last">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
