--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div id="main">
+      <img src=images/phones.png id="phones">
+      <div id="content">
+        <div id="top-content">
+          <a href="#"><img src=images/brand.png id="brand"></a>
+          <a href="#"><div id="login-btn"><img src=images/home.png id="home"><span id="login-text">Log in<span></div></a>
+        </div>
+        <div id="bottom-content">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br>with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a href="#"><img src=images/badge-iphone.png id="iphone"></a>
+          <a href="#"><img src=images/badge-android.png id="android"></a>
+        </div>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="footer">
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOGS</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+      </ul>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <span id="footer-span">&copy; 2014 INSTAGRAM</span>
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
