--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,28 +5,35 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main class="content">
+    <img src="images/phones.png" alt="phone using instagram">
+    <div>
+      <div class="ig-brand">
+        <img src="images/brand.png" alt="instagram logo">
+        <button><img src="images/home.png" alt="">Log in</button>
+      </div>
+      <div class="ig-info">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p> 
+        <div class="ig-download">
+          <img src="images/badge-iphone.png" alt="download from apple store">
+          <img src="images/badge-android.png" alt="download from google play">
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <a href="#" class="footer-link">About Us</a>
+    <a href="#" class="footer-link">Support</a>
+    <a href="#" class="footer-link">Blog</a>
+    <a href="#" class="footer-link">Press</a>
+    <a href="#" class="footer-link">API</a>
+    <a href="#" class="footer-link">Jobs</a>
+    <a href="#" class="footer-link">Privacy</a>
+    <a href="#" class="footer-link">Terms</a> 
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
