--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,48 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="main.css">
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="bg blue"></div>
-  <div class="bg img"></div>
-    <div class="content">
-      <img>
-      <div class="content2">
-        <div class="header"></div>
-          <div class="logo"></div>
-          <div class="instg"></div>
-          <div class="login"></div>
-        <div class="text">
-          Instagram
+  <div class="blue">
+    </div>
+    <section class="content">
+      <div class="mobile">
+        <img src='/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/phones.png'>
+      </div>
+      <div class="central">
+        <div class="login">
+          <div class="brand">
+            <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/brand.png">
+          </div>
+          <div class="home">
+            <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/home.png">
+            Log In
+          </div>
+        </div>
+        <div class="context">
+          <h1>
+            Capture and Share the World's Moments
+          </h1>
+          <p1> 
+            Instagram is a <strong>fast</strong>,<strong> beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          </p1>
+          <p2>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram -- it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p2>
+          <p3>
+            Oh yeah, did we mention it's free?
+          </p3>
+        </div>
+        <div class="apple">
+          <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/badge-iphone.png">
+        </div>
+      <div class="android">
+          <img src="/Users/alvaromartinez/IronHack/M1/lab-css-instagram-clone/starter-code/images/badge-android.png">
 
-          Capture and Share the World's Moments
-
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-          Oh yeah, did we mention it's free?
-
-          Download on the App Store
-          Get it on Google Play
-         </div>  
-         <div class="apps">
-           <img iphone>
-           <img andoid>
       </div>
       </div>
+      </div>
+    </section>
+    <footer>
+        <ul>
+          <li>
+          <a href="">About Us</a>
+          </li>
+          <li>
+              <a href="">About Us</a>
+          </li>
+          <li>
+              <a href="">About Us</a>
+          </li>
+          <li>
+              <a href="">About Us</a>
+          </li>
+          <li>
+              <a href="">About Us</a>
+          </li>
+          <li>
+              <a href="">Jobs</a>
+          </li>
+          <li>
+              <a href="">Privacy</a>
+          </li>
+          <li>
+              <a href="">Term</a>
+          </li>
+        </ul>
+      </footer>
 
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  </div>
 
   &copy; 2014 Instagram
 </body>
