fixed bottom font color

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,14 +39,14 @@
     
     <footer>
     <ul>
-      <li class="special">About Us</li>
-      <li class="special">Support</li>
-      <li class="special">Blog</li>
-      <li class="special">Press</li>
+      <li class="special">ABOUT US</li>
+      <li class="special">SUPPORT</li>
+      <li class="special">BLOG</li>
+      <li class="special">PRESS</li>
       <li class="special">API</li>
-      <li class="special">Jobs</li>
-      <li class="special">Privacy</li>
-      <li class="special">Terms</li>
+      <li class="special">JOBS</li>
+      <li class="special">PRIVACY</li>
+      <li class="special">TERMS</li>
       <li>&copy; 2014 Instagram</li>
     </ul>
     </footer>
