--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="main-container">
+    <div id="up-container">
+   <div class="one">
+      <img class="phone" src="./images/phones.png" alt="phones"/>
+   </div>
+   <div class="two">
+        <img class="brand" src="./images/brand.png" alt="brand"/>
+        <div class="content-button">
+          <div class="button">
+            <img class="home" src="./images/home.png" alt="home"/>
+            <span class="log-in">Log in</span>
+          </div>
+      </div>
+    <div class="twotwo">
+      <div class="description">
+        <h2>Capture and Share<br/> the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+    <div>
+       <img class="badge-iphone" src="./images/badge-iphone.png" alt="badge-iphone"/>
+       <img src="./images/badge-android.png" alt="badge-android"/>
+    </div>
+  </div>  
+</div>
+<div id="botton-container"> 
+  <div class="three">
+      <ul>
+        <nav>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </nav>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </div> 
+  </div>
 </body>
 </html>
