--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<div>
+  <div class="container">
+          <div id="phones">
+              <img src="./images/phones.png"/>
+          </div>
 
-  Capture and Share the World's Moments
+        <div id="site-header">
+           <img src="./images/brand.png"/> 
+           <button id="button"><img src="./images/home.png"/>Log in</button>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div id="site-main">
+            <h2>Capture and Share</br> the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <p> is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life</br>
+              with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+            <p>Take a picture or video, choose a filter to transform its look</br> 
+            and feel, then post to Instagram &mdash; it's that easy. You can</br> 
+            even share to Facebook, Twitter, Tumblr and more. It's </br>
+            a new way to see the world.</br></p>
 
-  Download on the App Store
-  Get it on Google Play
+            <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <img src="./images/badge-iphone.png"/><a href="https://itunes.apple.com/app/instagram/id389801252?mt=8"></a>
+            <img src="./images/badge-android.png"/><a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"></a>
+      </div>
+    </div>
+  </div>
+<nav>
+ <ul>
+    <li><a href="#"></a>ABOUT US</a></li>
+    <li><a href="#"></a>SUPPORT</a></li>
+    <li><a href="#"></a>BLOG</a></li>
+    <li><a href="#"></a>PRESS</a></li>
+    <li><a href="#"></a>API</a></li>
+    <li><a href="#"></a>JOBS</a></li>
+    <li><a href="#"></a>PRIVACY</a></li>
+    <li><a href="#"></a>TERMS</a></li>
+    &copy; 2014 Instagram
+</ul>
 
-  &copy; 2014 Instagram
+</nav>
+
+</div>
 </body>
 </html>
