--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header id="site-header"></header>
+  <div id="site-main">
+    <div class="phone">
+      <img src="./images/phones.png"/>
+    </div>
+    <div class="info">
+      <div class="info-header">
+        <img class="logo" src="./images/brand.png"/>
+        <a href="#" class="log-in"><img src="./images/home.png"/>&nbsp&nbsp&nbspLog in</a> 
+      </div>
+      <div class="info-abstract">
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="info-links">
+        <a href="#"><img src="./images/badge-android.png"/></a>
+        <a href="#"><img src="./images/badge-iphone.png"/></a>        
+      </div>
+    </div>
+  </div>    
+  <footer id="site-footer">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>          
+    </ul>
+  </footer>
 </body>
 </html>
