--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="left">
+      <img src="images/phones.png" alt="iPhone's">
+    </div>
+    <div class="right">
+      <div class="logo">
+        <img src="images/brand.png" alt="">
+      </div>
+      <div class="btn">
+        <button>
+          <img src="images/home.png" alt="">
+          Log in
+        </button>
+      </div>
+      <div class="clearfix"></div>
+      <div class="right-body">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?
+      </div>
+      <div class="app">
+        <img src="images/badge-iphone.png" alt="Descargar aplicacion para iOS">
+        <img src="images/badge-android.png" alt="Descargar aplicacion para Android">
+      </div>
+    </div> 
+  </div>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
